# MissionOrch

./: .gitignore  EVENT_DRIVEN_COA.md  README.md  config_validator.py  example_usage.py  main.py  pyproject.toml  requirements.txt  test_api_connectivity.py  test_full_system.py  test_optimization.py  test_structure.py
RAG-Anything/raganything/: __init__.py  parser.py
config/: agents.yaml  models.yaml  rag.yaml
docs/: CONCEPT.md
src/missionorch/: __init__.py  log_config.py
src/missionorch/core/: agent_base.py  agent_impl.py  agent_validator.py  coa_parser.py  coa_transformer.py  model_router.py  orchestrator.py  rag_manager.py
src/missionorch/prompts/: entity_parameters_reference.txt  entity_states_reference.txt  event_conditions_reference.txt  judge.txt  planner.txt  reflector.txt  validator.txt
src/missionorch/schemas/: coa.py
